--- a/index.html
+++ b/index.html
@@ -2,36 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>For My Valentine ❤️</title>
+  <title>Wait… ❤️</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <div class="container" id="main">
-    <h1>Hey ❤️</h1>
-    <p class="subtitle">I have something important to ask you...</p>
+  <!-- LOADING SCREEN -->
+  <div class="screen" id="loading">
+    <h1>Loading something special ❤️</h1>
+    <p id="loadingText">Please wait…</p>
+  </div>
+
+  <!-- DRAMATIC TEXT -->
+  <div class="screen hidden" id="intro">
+    <h1 class="fade">Wait… 👀</h1>
+    <h1 class="fade delay">Don’t scroll.</h1>
+    <h1 class="fade delay2">This is important 💭</h1>
+  </div>
+
+  <!-- MAIN QUESTION -->
+  <div class="screen hidden" id="main">
+    <h1>Hey Dobu 💖</h1>
+    <p class="subtitle">I have a very serious question…</p>
 
     <div class="card">
       <h2>Will you be my Valentine? 🌹</h2>
 
       <div class="buttons">
-        <button id="yesBtn">YES 💖</button>
-        <button id="noBtn">NO 😶</button>
+        <button id="yesBtn">YES 💕</button>
+        <button id="noBtn">NO 🙄</button>
       </div>
     </div>
   </div>
 
-  <div class="container hidden" id="yesScreen">
-    <h1>YAY!!! 💕🥹</h1>
+  <!-- YES SCREEN -->
+  <div class="screen hidden" id="yesScreen">
+    <h1>WAIT—YOU SAID YES?! 🥹💖</h1>
     <p class="love-text">
-      You just made me the happiest person alive.<br />
-      Thank you for being YOU 💖
+      I knew it.<br />
+      You just made my whole day…<br />
+      maybe my whole year 😌
     </p>
 
     <p class="signature">
       Forever yours,<br />
-      <strong>[YOUR NAME]</strong>
+      <strong>Deep Mashru</strong>
     </p>
 
     <div class="hearts"></div>
