Updated the code to make it funny.

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
   <!-- YES SCREEN -->
   <div class="screen hidden" id="yesScreen">
-    <h1>WAIT—YOU SAID YES?! 🥹💖</h1>
+    <h1>WAIT - YOU SAID YES?! 🥹💖</h1>
     <p class="love-text">
       I knew it.<br />
-      You just made my whole day…<br />
+      I know that no button is not working.... hahahaha <br />
       maybe my whole year 😌
     </p>
 
